[metadata]
name = bassg
version = 1.1.5
description = BASSG - Basic Agile Static Site Generator
long_description = file: README.md
url = https://github.com/hunterlawson/bassg
keywords = satic site generator, bassg
license = MIT
classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
packages = find:
install_requires =
    beautifulsoup4
    click
    Jinja2
    markdown

[options.entry_points]
console_scripts =
    bassg = bassg:cli